
10/03/2014 FASP 1.6.0:
- Update website and documentation.
- Fix a bug with MUMPS in VS2010 setting. 
- Modify debug information in MUMPS interface.
- Test FASP in the new Pangolin and fix several minor bugs.
- Fix VS2010 DEBUG mode bug.
- Fix a problem in test/main/test_bsr.c.
- Test regression_mm.c and record output in mm.out.
- Test regression_mf.c and record output in mf.out.
- Update Doxygen and webpage.

09/24/2014 FASP 1.5.9:
- Update PGMRES code. 
- Add new regression tests and update regression results. 
- Add upper limit for GMRES restarting number.
- Change default max number of levels back to 20.
- Check AMG coarse levels: decay ratio, density, min DOF. 
- Resolve multiple warnings in *.c files.
- Remove an unnecessary step: setting residual initial value.
- Fix missing variables for UMFPACK.
- Fix a potential problem in CMAKE when finding UMFPACK.
- Update Poisson FEM/FDM test results in out/poisson.out.
- Update TODO list.
- Modify Makefile and separate debug=yes and debug=all (all with FASP debug info).

09/22/2014 FASP 1.5.8:
- Update documentation and webpage.
- Regression test for fasp4blkoil due to a bug for setting parameters.
- Modify warning print level: less important warnings requires level>PRINT_MIN.
- Modify error print level and exit output.
- Fix several small problems in GMRES-type methods.
- Fix an AMG setup bug when setting up coarsest systems for direct solvers. 
- Fix a bug in setting restart number for pvgmres_mf.
- Fix warnings in VS2010 Win32 version.
- Fix a bug in timing subroutine which caused wrong wall time for some systems.
- File name change to avoid conflicts: message.h -> fasp_const.h.
- Reorganize GMRES code. 
- Update regression test results.

09/15/2014 FASP 1.5.7:
- Add a user option for choosing coarse level solvers.
- Fix average number of nonzeros output format problem. 
- Change AMG complexities output format. 
- Test VS10 and Intel Composer 2015 version.
- Update VS10 setting for MUMPS.