@@ -1,1 +1,1 @@
-FASP 1.6.0.5:0050c7a041d9+
+FASP 1.6.0.6:1e2b21f044d9+
